# MorseConverter

./: CMakeLists.txt  README.md
sources/: CMakeLists.txt
sources/MorseConverter/: CMakeLists.txt  main.cpp
sources/MorseConverter.Logic/: CMakeLists.txt  Converter.cpp  Model.cpp
sources/MorseConverter.Logic.Tests/: CMakeLists.txt  ConverterTests.cpp  ModelTests.cpp
sources/MorseConverter.Logic/MorseConverter.Logic/: Converter.h  IConverter.h  Model.h
sources/MorseConverter.Ui/: CMakeLists.txt  DialogCreator.cpp  MorseConverterWidget.ui
sources/MorseConverter.Ui/MorseConverter.Ui/: DialogCreator.h
